--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/GAUTAMRAJU15/Compariso#readme",
   "dependencies": {
     "apac": "^3.0.2",
+    "body-parser": "^1.18.3",
     "eslint": "^5.7.0",
     "express": "^4.16.4",
     "nodemon": "^1.18.4"
