--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "apac": "^3.0.2",
     "body-parser": "^1.18.3",
-    "eslint": "^5.7.0",
     "express": "^4.16.4",
     "nodemon": "^1.18.4"
+  },
+  "devDependencies": {
+    "eslint": "^5.7.0"
   }
 }
