--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "10.9.0"
   },
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "start": "npm ."
   },
   "repository": {
     "type": "git",
