--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon .",
-    "start": "npm ."
+    "start": "node ."
   },
   "repository": {
     "type": "git",
