--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": "10.9.0"
   },
   "scripts": {
-    "dev": "nodemon .",
-    "start": "node ."
+    "dev": "nodemon ."
   },
   "repository": {
     "type": "git",
