--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "apac": "^3.0.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "twilio": "^3.24.0"
   },
   "devDependencies": {
     "eslint": "^5.7.0"
