--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "nodemon": "^1.18.4",
-    "twilio": "^3.24.0"
+    "twilio": "^3.24.0",
+    "xml2json": "^0.11.2"
   },
   "devDependencies": {
     "eslint": "^5.7.0"
