env set for twilio, message recieved

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-ACCOUNT_SID = "ASDAS"
-AUTH_TOKEN = "SDSF"
-PHONE_NO = "+918449062704"
+ACCOUNT_SID = ACe6a26c83d6b8342daef53baab045bb1c
+AUTH_TOKEN = 6fb86df5a1adad8fd094e83cc69322f1
+PHONE_NO = +918449062704
+SANDBOX_NUMBER =  +14155238886
