--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "json-stringify-safe": "^5.0.1",
     "nodemon": "^1.18.4",
     "twilio": "^3.24.0",
     "xml2json": "^0.11.2"
