--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "10.9.0"
   },
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "node ."
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,6 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "json-stringify-safe": "^5.0.1",
-    "nodemon": "^1.18.4",
     "twilio": "^3.24.0",
     "xml2json": "^0.11.2"
   },
